# routes/financialProfileRoutes.js
@@ -4,6 +4,7 @@ import {
   calculateAndSaveProfile,
   saveMyProfile,
   getMyProfile,
+  getProfileWithDetails,
 } from "../controllers/financialProfileController.js";
 import verifyToken from "../middlewares/auth.js";
 
@@ -14,6 +15,7 @@ router.use(verifyToken);
 router.get("/questions", getQuestions);
 router.post("/calculate", calculateAndSaveProfile);
 router.post("/", saveMyProfile);
+router.get("/details", getProfileWithDetails);
 router.get("/", getMyProfile);
 
 export default router;
